--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poopbot",
   "version": "1.0.0",
-  "description": "## 🌌 游戏背景",
+  "description": "Poop Bot",
   "main": "game.js",
   "dependencies": {
     "ws": "^8.18.1"
