--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "svelte": "^5.23.1",
+    "tailwindcss": "^4.1.4",
     "vite": "^6.3.1"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.4"
   }
 }
