--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,6 +2,15 @@ name: Build and Push Docker Image
 
 on:
   workflow_call:
+    secrets:
+      ACR_USERNAME:
+        required: true
+      ACR_PASSWORD:
+        required: true
+      ACR_REGISTRY:
+        required: true
+      ACR_REPO:
+        required: true
 
 jobs:
   build-and-push:
