--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
             git checkout dash-bot-production
             git pull origin dash-bot-production
             docker login -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }} ${{ secrets.ACR_REGISTRY }}
-            docker-compose pull
-            docker-compose up -d
+            docker compose pull
+            docker compose up -d
