--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^6.3.1"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.4"
+    "@tailwindcss/vite": "^4.1.4",
+    "ws": "^8.18.1"
   }
 }
