--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Refresh CDN Cache
         run: |
-          aliyun cdn RefreshObjectCaches --ObjectPath "http://assets.dashbot.jianong.me/*" --ObjectType Directory
+          aliyun cdn RefreshObjectCaches --ObjectPath "http://assets.dashbot.jianong.me/" --ObjectType Directory
 
 
   build-server-push-acr:
