--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,24 +26,6 @@ jobs:
           endpoint: ${{ secrets.OSS_ENDPOINT }}
           folder: dist
 
-      - name: Install Aliyun CLI
-        run: |
-          curl -sL https://aliyuncli.alicdn.com/aliyun-cli-linux-latest-amd64.tgz | tar -xz
-          sudo mv aliyun /usr/local/bin/
-
-      - name: Configure Aliyun CLI
-        run: |
-          aliyun configure set \
-          --mode AK \
-          --region ap-southeast-1 \
-          --access-key-id ${{ secrets.OSS_ACCESS_KEY_ID }} \
-          --access-key-secret ${{ secrets.OSS_ACCESS_KEY_SECRET }}
-
-      - name: Refresh CDN Cache
-        run: |
-          aliyun cdn RefreshObjectCaches --ObjectPath "http://assets.dashbot.jianong.me/" --ObjectType Directory
-
-
   build-server-push-acr:
     runs-on: ubuntu-latest
     needs: build-frontend-upload-oss
@@ -74,3 +56,24 @@ jobs:
             docker login -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }} ${{ secrets.ACR_REGISTRY }}
             docker compose pull
             docker compose up -d
+
+  fresh-cdn:
+    runs-on: ubuntu-latest
+    needs: deploy-server
+    steps:
+      - name: Install Aliyun CLI
+        run: |
+          curl -sL https://aliyuncli.alicdn.com/aliyun-cli-linux-latest-amd64.tgz | tar -xz
+          sudo mv aliyun /usr/local/bin/
+
+      - name: Configure Aliyun CLI
+        run: |
+          aliyun configure set \
+          --mode AK \
+          --region ap-southeast-1 \
+          --access-key-id ${{ secrets.OSS_ACCESS_KEY_ID }} \
+          --access-key-secret ${{ secrets.OSS_ACCESS_KEY_SECRET }}
+
+      - name: Refresh CDN Cache
+        run: |
+          aliyun cdn RefreshObjectCaches --ObjectPath "http://assets.dashbot.jianong.me/" --ObjectType Directory
