--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "vite": "^6.3.1"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.4",
-    "ws": "^8.18.1"
+    "@tailwindcss/vite": "^4.1.4"
   }
 }
