--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   dashbot:
     image: crpi-wa5knvxxurqyukha.ap-southeast-1.personal.cr.aliyuncs.com/jianonghe/dashbot:latest
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
