--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.5.3",
     "svelte": "^5.23.1",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4"
