--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-svgr": "^4.3.0"
   },
   "dependencies": {
+    "@iconify/svelte": "^4.2.0",
     "@tailwindcss/vite": "^4.1.4"
   }
 }
